# func_usage_tracer

./: .gitignore  CMakeLists.txt  License.txt  README.md  instrace.c  instrace.h  memtrace.c  memtrace.h  trace_target_func_usage.c  trace_target_func_usage.h  utils.c  utils.h
